Fix gplus (#134)
* Fix gplus renable vibrant

* Streaming tool results